# datafusion-flight-sql-server

./: Cargo.toml
.github/workflows/: docs.yml  test.yml
datafusion-flight-sql-server/: CHANGELOG.md  Cargo.toml
datafusion-flight-sql-server/examples/: bearer_auth_flight_sql.rs  flight-sql.rs
datafusion-flight-sql-server/src/: service.rs
datafusion-flight-sql-server/tests/: integration_test.rs  schema_metadata_test.rs
datafusion-flight-sql-table-provider/: Cargo.toml
datafusion-flight-sql-table-provider/src/: lib.rs
