[workspace]
resolver = "2"

members = [
    "datafusion-flight-sql-server",
    "datafusion-flight-sql-table-provider",
]

[workspace.package]
version = "0.4.14"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/datafusion-contrib/datafusion-flight-sql-server"

[workspace.dependencies]
arrow-flight = { version = "57.2", features = ["flight-sql"] }
async-trait = "0.1"
datafusion = "52.0"
datafusion-federation = { version = "0.4.13" }
datafusion-substrait = "52.0"
futures = "0.3"
tokio = { version = "1.47", features = ["full"] }
tonic = { version = "0.14", features = ["transport", "codegen"] }
prost = "0.14"
